Testing pycharm github

--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -7,7 +7,7 @@
 
     <body>
 	<header> 
-		<img src="{% static "images/logo.png " %}" alt="Picture of SARS Logo" />
+		<img src="{% static "images/logo.png " %}" alt="Picture of SARS Logojj" />
 	{% if user.is_authenticated %}
 	Hello {{ user.username}} 
 	{% endif %}</header>
