--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
-{% load staticfiles %}
-<html>
-    <head>
-        <title>SARS - {% block title %}{% endblock %}</title>
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <body>
-	<header> 
-		<img src="{% static "images/logo.png " %}" alt="Picture of SARS Logojj" />
-	{% if user.is_authenticated %}
-	Hello {{ user.username}} 
-	{% endif %}</header>
-        <div>
-            {% block body_block %}{% endblock %}
+    <title>Rango - {% block title %}SARS!{% endblock %}</title>
+
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/SARS/">SARS</a>
         </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'query_construction' %}">Home</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
+                    {% else %}
+                        <li><a href="{% url 'registration_register' %}">Register Here</a></li>
+                        <li><a href="{% url 'auth_login' %}">Login</a></li>
+                    {% endif %}
 
-        <hr />
-
-        <div>
-             <ul>
-            {% if user.is_authenticated %}
-                 <li><a href="/SARS/logout/">Logout</a></li><br />
-            {% else %}
-               <li><a href="/SARS/register/">Register Here</a></li>
-               <li><a href="/SARS/login/">Login</a></li>
-            {% endif %}
-
-            </ul>
+              </ul>
         </div>
-		<footer></footer>
-    </body>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+                {% block side_block %}{% endblock %}
+
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+           <div>
+                {% block body_block %}{% endblock %}
+                </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
