--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -4,7 +4,7 @@
     {% block body_block %}
         <h1>Construct a query</h1>
 
-        <form id="query_form" method="post" action="/SARS/abstractevaluation/">
+        <form id="query_form" method="post" action="/SARS/">
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -15,8 +15,11 @@
                 {{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
+
             {% endfor %}
 
-            <input type="submit" name="submit" value="Search" />
+            {{ query }}
+
+            <input type="submit" name="submit" value="Add" />
         </form>
     {% endblock %}
