--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -49,8 +49,15 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-                {% block side_block %}{% endblock %}
+        <div class="col-sm-3 col-md-2 sidebar"> <!-- left sidebar -->
+          {% block side_block %}
+
+            {% if user.is_authenticated %}
+            Hello, {{ user.username }}
+
+            {% endif %}
+
+          {% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
