--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -20,5 +20,13 @@
 
             <input type="submit" name="submit" value="Add" />
         </form>
-         {{ query }}
+
+        <ol>
+
+        {% for entry in query %}
+
+                <li>{{ entry }}</li>
+
+        {% endfor %}
+        </ol>
     {% endblock %}
