fixed titles and new html stage 2 file

--- a/SARS_project/templates/registration/registration_complete.html
+++ b/SARS_project/templates/registration/registration_complete.html
@@ -1,5 +1,6 @@
 {% extends "SARS/base.html" %}
 
+{% block title %} Registration complete {% endblock %}
 
 {% block body_block %}
 <h1>Registration Complete</h1>
