--- a/SARS_project/templates/registration/login.html
+++ b/SARS_project/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends "SARS/base.html" %}
 
+{% block title %} Login {% endblock %}
+
 {% block body_block %}
 <h1>Login</h1>
         <form method="post" action=".">
