Un-hard coded path in views.py

--- a/SARS_project/templates/registration/registration_complete.html
+++ b/SARS_project/templates/registration/registration_complete.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <p>You are now registered</p>
-            <input type="submit" value="Click to create user file" />
+            <input type="submit" value="Click to construct query" />
             {{ user }}
     </form>
 {% endblock %}
