--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -4,13 +4,13 @@
 {% block title %} Stage 2 {% endblock %}
 
 {% block body_block %}
-<div class="city">
+<div class="abstract">
   <h2> Abstract 1 </h2>
   <p>blah blah blah</p>
   <p>blah.</p>
 </div>
 
-<div class="city">
+<div class="abstract">
   <h2> Abstract 2</h2>
   <p>meh meh meh</p>
   <p>meh</p>
