--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -20,8 +20,8 @@
 
             <input type="submit" name="submit" value="Add" />
         </form>
-
         <ol>
+
 
         {% for entry in query %}
 
@@ -29,4 +29,9 @@
 
         {% endfor %}
         </ol>
+        <form method="link" action = "/SARS/abstractevaluation/">
+            <input type="Submit" value="Search">
+        </form>
+
+
     {% endblock %}
