added document evaluation page and checkboxes

--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -29,7 +29,7 @@
 
         {% endfor %}
         </ol>
-        <form method="link" action = "/SARS/abstractevaluation/">
+        <form method="GET" action = "/SARS/abstractevaluation/">
             <input type="Submit" value="Search">
         </form>
 
