--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -4,16 +4,31 @@
 {% block title %} Stage 2 {% endblock %}
 
 {% block body_block %}
-<div class="abstract">
-  <h2> Abstract 1 </h2>
-  <p>blah blah blah</p>
-  <p>blah.</p>
-</div>
+    <h1> Please tick all the relevant abstracts </h1>
+    <form action="">
 
-<div class="abstract">
-  <h2> Abstract 2</h2>
-  <p>meh meh meh</p>
-  <p>meh</p>
-</div>
 
+
+   <input type="checkbox" name="vehicle1" value="value">
+
+   <div class="abstract">
+     <h3> Abstract 1 </h3>
+     <p>blah blah blah</p>
+     <p>blah.</p>
+   </div>
+
+   <input type="checkbox" name="checkbox" value= "value" >
+   <div class="abstract">
+     <h3> Abstract 2</h3>
+     <p>meh meh meh</p>
+     <p>meh</p>
+   </div>
+
+
+
+    </form>
+
+    <form method="link" action = "/SARS/documentevaluation/">
+            <input type="Submit" value="Next">
+        </form>
 {% endblock %}
