document evaluation html and checkboxes

--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -9,17 +9,17 @@
 
 
 
-   <input type="checkbox" name="vehicle1" value="value">
+
 
    <div class="abstract">
-     <h3> Abstract 1 </h3>
+     <h3> Abstract 1  <input type="checkbox" name="vehicle1" value="value"> </h3>
      <p>blah blah blah</p>
      <p>blah.</p>
    </div>
 
-   <input type="checkbox" name="checkbox" value= "value" >
+
    <div class="abstract">
-     <h3> Abstract 2</h3>
+     <h3> Abstract 2 <input type="checkbox" name="checkbox" value= "value" ></h3>
      <p>meh meh meh</p>
      <p>meh</p>
    </div>
