--- a/SARS_project/templates/SARS/document_evaluation.html
+++ b/SARS_project/templates/SARS/document_evaluation.html
@@ -3,7 +3,7 @@
 {% block title %} Stage 3 {% endblock %}
 
 {% block body_block %}
-   <a href="https://www.youtube.com/"> Link to Document 1</a><br>
-   <a href="https://www.youtube.com/"> Link to Document 2</a>
+   <a href="https://www.youtube.com/" target="_blank"> Link to Document 1</a><br>
+   <a href="https://www.youtube.com/" target="_blank"> Link to Document 2</a>
 
 {% endblock %}
