--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -5,30 +5,17 @@
 
 {% block body_block %}
     <h1> Please tick all the relevant abstracts </h1>
-    <form action="">
-
-
-
-   <input type="checkbox" name="vehicle1" value="value">
-
-   <div class="abstract">
-     <h3> Abstract 1 </h3>
-     <p>blah blah blah</p>
-     <p>blah.</p>
-   </div>
-
-   <input type="checkbox" name="checkbox" value= "value" >
-   <div class="abstract">
-     <h3> Abstract 2</h3>
-     <p>meh meh meh</p>
-     <p>meh</p>
-   </div>
-
-
-
+    <form>
+       <input type="checkbox" name="vehicle1" value="value">
+       <div>
+         <h3> <input type="checkbox" name="checkbox" value= "value" >Abstract 1 </h3>
+         <p>blah blah blah</p>
+         <p>blah.</p>
+       </div>
     </form>
 
     <form method="link" action = "/SARS/documentevaluation/">
-            <input type="Submit" value="Next">
-        </form>
+        <input type="Submit" value="Next">
+    </form>
+
 {% endblock %}
