checkboxes and redirection

--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -12,14 +12,15 @@
 
 
    <div class="abstract">
-     <h3> Abstract 1  <input type="checkbox" name="vehicle1" value="value"> </h3>
+     <h3> <input type="checkbox" name="vehicle1" value="value"> Abstract 1  </h3>
      <p>blah blah blah</p>
      <p>blah.</p>
    </div>
 
 
    <div class="abstract">
-     <h3> Abstract 2 <input type="checkbox" name="checkbox" value= "value" ></h3>
+
+     <h3><input type="checkbox" name="checkbox" value= "value" > Abstract 2 </h3>
      <p>meh meh meh</p>
      <p>meh</p>
    </div>
