--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -19,6 +19,12 @@
     <![endif]-->
 
     <title>SARS - {% block title %}SARS!{% endblock %}</title>
+    <script src="scripts/jquery-1.6.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    {% load staticfiles %}
+
+    <script src="{% static "js/jquery-1.11.1.js" %}"></script>
+    <script src="{% static "js/rango-jquery.js" %}"></script>
   </head>
 
   <body>
