--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -5,35 +5,20 @@
 
 {% block body_block %}
     <h1> Please tick all the relevant abstracts </h1>
-<<<<<<< HEAD
     <form>
        <!--<input type="checkbox" name="vehicle1" value="value">-->
-=======
 
->>>>>>> a4db1e22ef4f5055fba94a46d323c1bd263a81fd
        <div>
        <ol>
            {%  for abstract in abstracts  %}
-                    <li>
+                    <li style="border: 1px solid #000000">
                         <p>
                             <input type="checkbox" name="checkbox" value= "value" >{{ abstract }}
                         </p>
-                    </li>
+                    </li><br>
            {% endfor %}
        </ol>
        </div>
-<<<<<<< HEAD
-=======
-
-    <form action="">
-
-   <div class="abstract">
-     <h3> <input type="checkbox" name="vehicle1" value="value"> Abstract 1  </h3>
-     <p>blah blah blah</p>
-     <p>blah.</p>
-   </div>
-
->>>>>>> a4db1e22ef4f5055fba94a46d323c1bd263a81fd
     </form>
 
     <form method="link" action = "/SARS/documentevaluation/">
