--- a/SARS_project/templates/registration/login.html
+++ b/SARS_project/templates/registration/login.html
@@ -3,14 +3,19 @@
 {% block title %} Login {% endblock %}
 
 {% block body_block %}
-<h1>Login</h1>
-        <form method="post" action=".">
-                {% csrf_token %}
-                {{ form.as_p }}
+        <div>
+                <div>
+                        <h1>Login</h1>
+                        <form method="post" action="." >
+                                {% csrf_token %}
+                                {{ form.as_p }}
 
-                <input type="submit" value="Log in" />
-                <input type="hidden" name="next" value="/SARS/" />
-                </form>
-                
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+                                <input type="submit" value="Log in"/>
+                                <input type="hidden" name="next" value="/SARS/"/>
+                        </form>
+
+                        <br><p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+                </div>
+        </div>
+
 {% endblock %}
