--- a/SARS_project/templates/SARS/document_evaluation.html
+++ b/SARS_project/templates/SARS/document_evaluation.html
@@ -3,7 +3,26 @@
 {% block title %} Stage 3 {% endblock %}
 
 {% block body_block %}
-   <a href="https://www.youtube.com/" target="_blank"> Link to Document 1</a><br>
-   <a href="https://www.youtube.com/" target="_blank"> Link to Document 2</a>
+
+    <h1> Please tick all the relevant documents </h1>
+    <!--go back button-->
+    <button onclick="goBack()">Go Back</button>
+        <script>
+            function goBack() {
+            window.history.back();
+      }
+        </script>
+   <div>
+   <ol>
+        <!--printing the documents related to the relevant abstracts-->
+        {%  for ID in documentID  %}
+            <li>
+                <p>
+                    <input type="checkbox" name="checkbox" value= "value" ><a href="http://www.ncbi.nlm.nih.gov/pubmed/{{ ID }}" target="_blank">  {{ ID }}</a><br>
+                </p>
+            </li>
+        {% endfor %}
+   </ol>
+   </div>
 
 {% endblock %}
