--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -17,37 +17,40 @@
                 {{ field }}
 
             {% endfor %}
-
+            <!--adding the add button-->
             <input type="submit" name="submit" value="Add" />
         </form>
-        <form method="GET" action = "/SARS/abstractevaluation/">
-            <input type="Submit" value="Search">
-        </form>
-        <form method="GET" action = "/SARS/clearall">
-        <input type="Submit" value="Clear All">
-        <script>$( 'Clear All' ).click(function() {
-                if (window.location.href.indexOf('reload')==-1) {
-                   window.location.replace(window.location.href+'?reload');
+        <!--adding search and clear all buttons-->
+        <div style="display: inline-block">
+            <form method="GET" action = "/SARS/abstractevaluation/">
+                <input type="Submit" value="Search">
+            </form>
+        </div>
+        <div style="display: inline-block">
+            <form method="GET" action = "/SARS/clearall">
+                <input type="Submit" value="Clear All">
+                    <!--when the button is clicked the printQuery is clear in the views and then the page is
+                    refreshed once so that the changes will be applied-->
+                    <script>$( 'Clear All' ).click(function() {
+                        if (window.location.href.indexOf('reload')==-1) {
+                            window.location.replace(window.location.href+'?reload');
     }
 });
-        </script>
-        </form>
-
+                    </script>
+            </form>
+        </div>
         <p></p>
         <ol>
+        <!--printing all the queries that are made-->
         {% for entry in query %}
                 <li><button name="subject" type="submit" value=&#10007>&#10007</button>{{ entry }}</li>
 <script>
                 $("li").ready(function(){
                 $("li").click(function() {
-                    $(this).remove();
-
-                <!--alert("The paragraph was clicked.");-->
+                $(this).remove();
     });
 });
 </script>
         {% endfor %}
         </ol>
-
-
     {% endblock %}
