--- a/SARS_project/templates/registration/login.html
+++ b/SARS_project/templates/registration/login.html
@@ -4,13 +4,10 @@
 
 {% block body_block %}
 <h1>Login</h1>
-        <form method="post" action=".">
+        <form method="post" action="/SARS/">
                 {% csrf_token %}
                 {{ form.as_p }}
 
-                <input type="submit" value="Log in" />
-                <input type="hidden" name="next" value="/SARS/" />
                 </form>
-                
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+
 {% endblock %}
