--- a/SARS_project/templates/SARS/abstract_evaluation.html
+++ b/SARS_project/templates/SARS/abstract_evaluation.html
@@ -6,7 +6,7 @@
 {% block body_block %}
     <h1> Please tick all the relevant abstracts </h1>
     <!--go back and next buttons-->
-    <div>
+    <div style="display:inline-block">
         <button onclick="goBack()">Go Back</button>
             <script>
                  function goBack() {
@@ -21,7 +21,9 @@
         </form>
     </div>
     
-    <p></p>
+    <div style="height:1em"></div>
+    <div style="position: relative;text-align: center;height:0.2em;background-color:black"></div>
+    <div style="height:1em"></div>
     
     <form>
        <ol>
