--- a/SARS_project/templates/SARS/document_evaluation.html
+++ b/SARS_project/templates/SARS/document_evaluation.html
@@ -7,11 +7,15 @@
     
     <!--go back button-->
     <button onclick="goBack()">Go Back</button>
-        <script>
-            function goBack() {
-            window.history.back();
-      }
-        </script>
+    <script>
+        function goBack() {
+        window.history.back();
+        }
+    </script>
+
+    <div style="height:1em"></div>
+    <div style="position: relative;text-align: center;height:0.2em;background-color:black"></div>
+    <div style="height:1em"></div>
     
     <ol style="font-size: 20px">
         {%  for ID in documentID  %}
