--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -20,6 +20,9 @@
             <!--adding the add button-->
             <input type="submit" name="submit" value="Add" />
         </form>
+
+        <div style="height:1em"></div>
+
         <!--adding search and clear all buttons-->
         <div style="display: inline-block">
             <form method="GET" action = "/SARS/abstractevaluation/">
@@ -31,26 +34,31 @@
                 <input type="Submit" value="Clear All">
                     <!--when the button is clicked the printQuery is clear in the views and then the page is
                     refreshed once so that the changes will be applied-->
-                    <script>$( 'Clear All' ).click(function() {
-                        if (window.location.href.indexOf('reload')==-1) {
-                            window.location.replace(window.location.href+'?reload');
-    }
-});
+                    <script>
+                        $( 'Clear All' ).click(function() {
+                            if (window.location.href.indexOf('reload')==-1) {
+                                window.location.replace(window.location.href+'?reload');
+                            }
+                        });
                     </script>
             </form>
         </div>
-        <p></p>
+
+        <div style="height:1em"></div>
+        <div style="position: relative;text-align: center;height:0.2em;background-color:black"></div>
+        <div style="height:1em"></div>
+
         <ol>
         <!--printing all the queries that are made-->
         {% for entry in query %}
-                <li><button name="subject" type="submit" value=&#10007>&#10007</button>{{ entry }}</li>
-<script>
+            <li><button name="subject" type="submit" value=&#10007>&#10007</button>{{ entry }}</li>
+            <script>
                 $("li").ready(function(){
-                $("li").click(function() {
-                $(this).remove();
-    });
-});
-</script>
+                    $("li").click(function() {
+                        $(this).remove();
+                    });
+                });
+            </script>
         {% endfor %}
         </ol>
     {% endblock %}
