--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -21,6 +21,8 @@
     <script src="scripts/jquery-1.6.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
+    {% block head_block %}{% endblock %}
+
   </head>
 
   <body>
