--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -1,6 +1,6 @@
 {% extends 'SARS/base.html' %}
 
-{% block title %} Stage 1 {% endblock %}
+{% block title %} Query Construction {% endblock %}
 
     {% block body_block %}
         <h1>Construct a query</h1>
