--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -17,7 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>SARS - {% block title %}SARS!{% endblock %}</title>
+    <title>SARS - {% block title %}{% endblock %}</title>
     <script src="scripts/jquery-1.6.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -68,7 +68,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <div>
                 {% block body_block %}{% endblock %}
-                </div>
+            </div>
         </div>
       </div>
     </div>
