--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -36,14 +36,8 @@
         </div>
 
         <div style="display: inline-block">
-            <form method="GET" action = "/SARS/clearall">
+            <form method="GET" action = "">
                 <button name="clear" type="button" value ="clear">Clear All</button>
-            </form>
-        </div>
-
-        <div style="display: inline-block">
-            <form>
-                <button name="edit" type="button" value ="edit">Edit</button>
             </form>
         </div>
 
