abstract jquery compatibility attempt

--- a/SARS_project/templates/SARS/query_construction.html
+++ b/SARS_project/templates/SARS/query_construction.html
@@ -30,8 +30,8 @@
 
         <!--adding search and clear all buttons-->
         <div style="display: inline-block">
-            <form method="GET" action = "">
-                <button name="search" type="Submit" value="Search"></button>
+            <form action="/SARS/abstractevaluation">
+                <button name="search" type="Submit">Search</button>
             </form>
         </div>
 
