--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -1,86 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="{{ STATIC_URL }}images/logo.png" rel="icon">
-
-
-    <link href="{{ STATIC_URL }}css/FirstCSS.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/SecondCSS.css" rel="stylesheet">
-
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>SARS - {% block title %}{% endblock %}</title>
-    <script src="scripts/jquery-1.6.2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-    {% block head_block %}{% endblock %}
-
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/SARS/">SARS</a>
-        </div>
-        <div class="navbar-collapse collapse">
-
-            <img src="/static/images/rsz_1rsz_1rsz_logo1.png" alt="logo">
-
-          <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'query_construction' %}">Home</a></li>
-                    {% if user.is_authenticated %}
-                        <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
-                    {% else %}
-                        <li><a href="{% url 'registration_register' %}">Register Here</a></li>
-                        <li><a href="{% url 'auth_login' %}">Login</a></li>
-                    {% endif %}
-          </ul>
-        </div>
-      </div>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
+		<title>SARS</title>
+		<meta name="generator" content="Bootply" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+		<!--[if lt IE 9]>
+			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet">
+        <link href="{{ STATIC_URL }}images/logo.png" rel="icon">
+        {% block head_block %}{% endblock %}
+	</head>
+	<body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">SARS</a>
     </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/SARS/">Home</a></li>
+        <li><a href="#about">About</a></li>
+        {% if user.is_authenticated %}
+            <li class="active"><a href="#profile">Profile</a></li>
+            <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
+        {% else %}
+            <li><a href="{% url 'registration_register' %}">Register</a></li>
+            <li><a href="{% url 'auth_login' %}">Login</a></li>
+        {% endif %}
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar"> <!-- left sidebar -->
-          {% block side_block %}
-
-            {% if user.is_authenticated %}
-            Hello, <b>{{ user.username }}</b>
-            {% endif %}
-
-          {% endblock %}
-
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div>
-                {% block body_block %}{% endblock %}
-            </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+<div class="container">
+  
+  <div class="text-center">
+    {% block body_block %}{% endblock %}
+  </div>
+  
+</div><!-- /.container -->
+	<!-- script references -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+	</body>
 </html>
