--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
-		<title>SARS</title>
-		<meta name="generator" content="Bootply" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-		<!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet">
-        <link href="{{ STATIC_URL }}images/logo.png" rel="icon">
-        {% block head_block %}{% endblock %}
-	</head>
-	<body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">SARS</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="/SARS/">Home</a></li>
-        <li><a href="#about">About</a></li>
-        {% if user.is_authenticated %}
-            <li class="active"><a href="#profile">Profile</a></li>
-            <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
-        {% else %}
-            <li><a href="{% url 'registration_register' %}">Register</a></li>
-            <li><a href="{% url 'auth_login' %}">Login</a></li>
-        {% endif %}
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</div>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <title>SARS</title>
 
-<div class="container">
-  
-  <div class="text-center">
-    {% block body_block %}{% endblock %}
-  </div>
-  
-</div><!-- /.container -->
-	<!-- script references -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-	</body>
+        <!-- script references -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <script src="{{ STATIC_URL }}JQuery/bootstrap.min.js"></script>
+
+        <meta name="generator" content="Bootply" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+
+        <!--[if lt IE 9]>
+        <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+        <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet">
+        <link href="{{ STATIC_URL }}images/logo.png" rel="icon">
+
+        {% block head_block %}{% endblock %}
+    </head>
+    <body>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">SARS</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/SARS/">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a href="#profile">Profile</a></li>
+                            <li><a href="/SARS/basic_search">Search</a></li>
+                            <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
+                        {% else %}
+                            <li><a id="login" href="{% url 'auth_login' %}">Login</a></li>
+                            <li><a href="{% url 'registration_register' %}">Register</a></li>
+                        {% endif %}
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-center">
+                {% block body_block %}{% endblock %}
+            </div>
+        </div>
+    </body>
 </html>
