Updated home page CSS and HTML

--- a/SARS_project/templates/SARS/advanced_search.html
+++ b/SARS_project/templates/SARS/advanced_search.html
@@ -23,7 +23,7 @@
             {% endfor %}
 
             <form action="/SARS/abstractevaluation">
-                <button name="search" type="Submit">Search</button>
+                <button name="advanced" type="Submit">Search</button>
             </form>
 
         </form>
