--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -35,11 +35,11 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/SARS/">Home</a></li>
+                        <li><a href="{% url 'index' %}">Home</a></li>
                         <li><a href="#about">About</a></li>
                         {% if user.is_authenticated %}
                             <li><a href="#profile">Profile</a></li>
-                            <li><a href="/SARS/basic_search">Search</a></li>
+                            <li><a href="{% url 'basic_search' %}">Search</a></li>
                             <li><a href="{% url 'auth_logout' %}?next=/SARS/">Logout</a></li><br />
                         {% else %}
                             <li><a id="login" href="{% url 'auth_login' %}">Login</a></li>
