--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="{% url 'index' %}">Home</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="{% url 'user_guide' %}">User Guide</a></li>
                         {% if user.is_authenticated %}
                             <li><a href="#profile">Profile</a></li>
                             <li><a href="{% url 'basic_search' %}">Search</a></li>
